<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addComplaintDialogCardView"
    style="@style/dialogCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/addComplaintDialogGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/addComplaintDialogTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textColor="@color/search_border"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/addComplaintDialogTitle"
            app:layout_constraintEnd_toStartOf="@id/addComplaintDialogGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addComplaintDialogTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_complaint_title"
            android:maxLines="1"
            android:textColor="@color/search_border"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addComplaintDialogGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addComplaintDialogComplaintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/complaint"
            android:textColor="@color/search_border"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/addComplaintDialogComplaint"
            app:layout_constraintEnd_toStartOf="@id/addComplaintDialogGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addComplaintDialogTitleText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addComplaintDialogComplaint"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_complaint_text"
            android:maxLines="3"
            android:textColor="@color/search_border"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addComplaintDialogGuideline"
            app:layout_constraintTop_toBottomOf="@id/addComplaintDialogTitle" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/addComplaintDialogDivider"
            style="@style/dialogDivider"
            app:layout_constraintBottom_toTopOf="@id/addComplaintDialogPostBtn"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addComplaintDialogPostBtn"
            style="@style/dialogButton"
            android:text="@string/post"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>