<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reg_logo"
            android:layout_width="@dimen/logoWidth"
            android:layout_height="@dimen/logoHight"
            android:layout_marginTop="@dimen/layoutMarginTop"
            android:text="@string/btracker"
            android:textAlignment="center"
            android:textColor="@color/search_border"
            android:textSize="@dimen/logoSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/layoutMarginTop"
            app:layout_constraintEnd_toStartOf="@+id/reg_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_iconfinder_back_arrow_211686" />

        <ImageView
            android:id="@+id/imgAddPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/txtInputMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_logo"
            app:srcCompat="@drawable/ic_add_user_to_social_network" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addPhoto"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_photo"
            android:textAllCaps="false"
            android:textColor="@color/search_border"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAddPhoto" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Style.Button"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhoto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>